- Создана связь между user и task - Создана альтермиграция - Обновлены структуры моделей - Обновлен openapi.yaml - Обновлены taskService и userService - Обновлен taskhandlers.go
