# internal/web/users/api.gen.go
@@ -14,6 +14,14 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
+// Task defines model for Task.
+type Task struct {
+	Id     *uint   `json:"id,omitempty"`
+	IsDone *bool   `json:"is_done,omitempty"`
+	Task   *string `json:"task,omitempty"`
+	UserId *uint   `json:"user_id,omitempty"`
+}
+
 // Users defines model for Users.
 type Users struct {
 	Email    *string `json:"email,omitempty"`
@@ -35,6 +43,9 @@ type ServerInterface interface {
 	// Create a new user
 	// (POST /users)
 	PostUsers(ctx echo.Context) error
+	// Get all tasks from a user
+	// (GET /users/tasks/{id})
+	GetUsersTasksId(ctx echo.Context, id uint) error
 	// Deletes the User
 	// (DELETE /users/{id})
 	DeleteUsersId(ctx echo.Context, id uint) error
@@ -63,6 +74,22 @@ func (w *ServerInterfaceWrapper) PostUsers(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.PostUsers(ctx)
+	return err
+}
+
+// GetUsersTasksId converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsersTasksId(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id uint
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetUsersTasksId(ctx, id)
 	return err
 }
 
@@ -128,6 +155,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 
 	router.GET(baseURL+"/users", wrapper.GetUsers)
 	router.POST(baseURL+"/users", wrapper.PostUsers)
+	router.GET(baseURL+"/users/tasks/:id", wrapper.GetUsersTasksId)
 	router.DELETE(baseURL+"/users/:id", wrapper.DeleteUsersId)
 	router.PATCH(baseURL+"/users/:id", wrapper.PatchUsersId)
 
@@ -162,6 +190,23 @@ type PostUsers201JSONResponse Users
 func (response PostUsers201JSONResponse) VisitPostUsersResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(201)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetUsersTasksIdRequestObject struct {
+	Id uint `json:"id"`
+}
+
+type GetUsersTasksIdResponseObject interface {
+	VisitGetUsersTasksIdResponse(w http.ResponseWriter) error
+}
+
+type GetUsersTasksId200JSONResponse []Task
+
+func (response GetUsersTasksId200JSONResponse) VisitGetUsersTasksIdResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -208,6 +253,9 @@ type StrictServerInterface interface {
 	// Create a new user
 	// (POST /users)
 	PostUsers(ctx context.Context, request PostUsersRequestObject) (PostUsersResponseObject, error)
+	// Get all tasks from a user
+	// (GET /users/tasks/{id})
+	GetUsersTasksId(ctx context.Context, request GetUsersTasksIdRequestObject) (GetUsersTasksIdResponseObject, error)
 	// Deletes the User
 	// (DELETE /users/{id})
 	DeleteUsersId(ctx context.Context, request DeleteUsersIdRequestObject) (DeleteUsersIdResponseObject, error)
@@ -274,6 +322,31 @@ func (sh *strictHandler) PostUsers(ctx echo.Context) error {
 		return err
 	} else if validResponse, ok := response.(PostUsersResponseObject); ok {
 		return validResponse.VisitPostUsersResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetUsersTasksId operation middleware
+func (sh *strictHandler) GetUsersTasksId(ctx echo.Context, id uint) error {
+	var request GetUsersTasksIdRequestObject
+
+	request.Id = id
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetUsersTasksId(ctx.Request().Context(), request.(GetUsersTasksIdRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetUsersTasksId")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetUsersTasksIdResponseObject); ok {
+		return validResponse.VisitGetUsersTasksIdResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
