# openapi/openapi.yaml
@@ -151,6 +151,28 @@ paths:
       responses:
         '204':
           description: No content, this user has been deleted.
+  /users/tasks/{id}:
+    get:
+      summary: Get all tasks from a user
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: The User ID
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: A list of tasks user's
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Users'
          
 components:
   schemas:
@@ -164,6 +186,9 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: integer
+          format: uint
 
     Users:
       type: object
